--- a/style.scss
+++ b/style.scss
@@ -156,7 +156,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+  border-bottom: 1px solid $lightGray;ava
 
   @include mobile {
     text-align: center;
@@ -164,9 +164,9 @@ img {
 }
 
 .site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
+  float: center;
+  width: 305px;
+  height: 305px;
   margin-right: 15px;
 
   @include mobile {
