--- a/style.scss
+++ b/style.scss
@@ -156,7 +156,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;ava
+  border-bottom: 1px solid $lightGray;
 
   @include mobile {
     text-align: center;
@@ -164,7 +164,7 @@ img {
 }
 
 .site-avatar {
-  float: left;
+  float: center;
   width: 305px;
   height: 305px;
   margin-right: 15px;
